--- a/03_Vectors.Rmd
+++ b/03_Vectors.Rmd
@@ -363,7 +363,7 @@ x <- matrix(1:6, nrow = 2, ncol = 3)
 x
 
 # One vector argument to describe all dimensions
-y <- array(1:12, c(2, 3, 2))
+y <- array(1:24, c(2, 3, 4)) # rows, columns, no of arrays
 y
 
 # You can also modify an object in place by setting dim()
